# simple-openstack-mcp

./: .gitignore  README.md  commander.py  pyproject.toml  server.py
